--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,10 @@
         <item>dairy</item>
     </string-array>
     <string-array name="breakfastTagsExclude">
-        <item>dairy</item>
-        <item>egg</item>
-        <item>gluten</item>
-        <item>peanut</item>
-        <item>tree Nut</item>
+        <item>Dairy</item>
+        <item>Gluten</item>
+        <item>Peanut</item>
+        <item>Tree Nut</item>
 
     </string-array>
 
