--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,14 +32,35 @@
         <item>gluten free</item>
         <item>dairy</item>
     </string-array>
+
     <string-array name="breakfastTagsExclude">
         <item>Dairy</item>
         <item>Gluten</item>
         <item>Peanut</item>
         <item>Tree Nut</item>
+    </string-array>
+
+    <string-array name="foodTypes">
+        <item>Lunch</item>
+        <item>vegan</item>
+        <item>gluten free</item>
+        <item>dairy</item>
+        <item>African</item>
+        <item>Asian</item>
+        <item>French</item>
+        <item>Italian</item>
+        <item>Indian</item>
 
     </string-array>
 
+    <string-array name="allergens">
+        <item>Peanut</item>
+        <item>Sesame</item>
+        <item>Seafood</item>
+        <item>Sulfite</item>
+
+
+    </string-array>
 
     <string name="account">Account</string>
     <string name="home">Home</string>
@@ -76,6 +97,9 @@
     <string name="favorite_random_dishes">Favorite Random Dishes</string>
     <string name="add_own_meal">Add Own Meal</string>
     <string name="generate_random_dishes">Generate Random Dishes</string>
+    <string name="enter">Enter</string>
+    <string name="click_to_refresh">Click to Refresh</string>
+    <string name="browse_meals">Browse Meals</string>
 
 
 </resources>
