--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
         <item>main course</item>
         <item>breakfast</item>
         <item>appetizer</item>
-        <item>side dish</item>
+        <item name="side_dish">side dish</item>
         <item>snack</item>
         <item>salad</item>
         <item>beverage</item>
@@ -89,6 +89,7 @@
     <string name="similar_recipes">Similar Recipes</string>
 
 
+
     <string name="hello_world">Hello World</string>
     <string name="logout">Logout</string>
     <string name="dinner">Dinner</string>
@@ -112,6 +113,9 @@
     <string name="enter">Enter</string>
     <string name="click_to_refresh">Click to Refresh</string>
     <string name="browse_meals">Browse Meals</string>
+    <string name="generate_random_lunch_meals">Generate Random Lunch Meals</string>
+    <string name="add_ownMeal">Add Own Meal</string>
+    <string name="view_your_liked_dishes">View Your Liked Dishes</string>
 
 
 </resources>
