added comments/cites in java Doc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,7 @@
     <string name="generate_random_lunch_meals">Generate Random Lunch Meals</string>
     <string name="add_ownMeal">Add Own Meal</string>
     <string name="view_your_liked_dishes">View Your Liked Dishes</string>
+    <string name="side_dish">Side Dish</string>
 
 
 </resources>
